# cairo-proof-parser

./: .gitignore  Cargo.toml  README.md  dif1.json  dif2.json  fib2.json  o  proof_with_smaller_n_queries.json
examples/: lambda.rs
proof-parser/: Cargo.toml
proof-parser/src/: json_parser.rs  layout.rs  lib.rs  output.rs  program.rs  proof_params.rs  proof_structure.rs  stark_proof.rs  utils.rs
proof-parser/src/annotations/: extract.rs  mod.rs
resources/: proof.json
scripts/: get_output.py  get_program_hash.py
serde-felt/: Cargo.toml
serde-felt/src/: deser.rs  error.rs  lib.rs  montgomery.rs  ser.rs  tests.rs
src/: ast.rs  builtins.rs  json_parser.rs  layout.rs  lib.rs  output.rs  program.rs  proof_params.rs  stark_proof.rs  utils.rs
src/annotations/: annotation_kind.rs  extract.rs  mod.rs
src/deser/: deser.rs  error.rs  errors.rs  mod.rs  montgomery.rs  ser.rs  tests.rs
src/lambda/: mod.rs
