[package]
name = "cairo-proof-parser"
description = "Parser that translates beetwen different cairo proof formats"
edition = "2021"
version = "0.3.0"
license = "MIT"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cairo-proof-parser-display"
path = "src/bin/display_proof.rs"

[[bin]]
name = "cairo-proof-parser-output"
path = "src/bin/extract_output.rs"

[[bin]]
name = "cairo-proof-parser-program"
path = "src/bin/extract_program_hash.rs"

[[bin]]
name = "cairo-proof-parser-register"
path = "src/bin/register_fact.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
num-bigint = { version = "0.4.4", features = ["serde"] }
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "d980869" }
starknet-crypto = "0.6.2"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
