[workspace]
resolver = "2"
members = ["proof-parser", "serde-felt"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
num-bigint = { version = "0.4.4", features = ["serde"] }
prefix-hex = "0.7.1"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
starknet = "0.11.0"
starknet-types-core = "0.1.3"
starknet-crypto = { version = "0.7.1", features = ["alloc"] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
serde-felt = { path = "./serde-felt" }
starknet-ff = "0.3.7"
