[workspace]
resolver = "2"
members = ["proof-parser", "serde-felt"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
num-bigint = { version = "0.4.4", features = ["serde"] }
prefix-hex = "0.7.1"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
starknet-crypto = { version = "0.7.1", features = ["alloc"] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
serde-felt = { path = "./serde-felt" }

starknet = "0.11.0"
# serde-starknet = { package = "starknet", version = "=0.10.0" }
starknet-types-core = "~0.1.4"
# starknet-ff = "0.3.7"

# [patch.crates-io]
# # Remove this patch once the following PR is merged: <https://github.com/xJonathanLEI/starknet-rs/pull/615>
# #
# # To enable std feature on `starknet-types-core`.
# # To re-export the entire `felt` module from `starknet-types-core`.
# starknet-core = { git = "https://github.com/kariy/starknet-rs", branch = "dojo-patch" }
